Fixed overflow

--- a/StyleSheet/style.css
+++ b/StyleSheet/style.css
@@ -2,20 +2,36 @@
 html {
   overflow-y: scroll;
   overflow-x: hidden;
+  height: 100vh;
+  object-fit: cover;
+  background-image: url("https://images.unsplash.com/photo-1507608869274-d3177c8bb4c7?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80");
 }
 * {
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
+  background-image: cover;
+  overflow: hidden;
+}
+h3 {
+  margin-bottom: 0.2rem;
 }
 body {
-  font-family: "Open Sans", sans-serif;
-  background-image: url("Background.png");
-  object-fit: cover;
-  font-size: 1rem;
+  background-image: url("https://images.unsplash.com/photo-1507608869274-d3177c8bb4c7?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80");
   background-repeat: no-repeat;
+  color: rgb(45, 25, 172);
+  font-family: "Open Sans", sans-serif;
+  font-size: 1rem;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  box-sizing: border-box;
 }
 section:not(#about) {
-  border: black 2px solid;
+  border-width: 3px;
+  border-style: solid;
+  border-image: linear-gradient(to bottom, red, rgba(0, 0, 0, 0)) 1 100%;
   border-radius: 10px;
   margin-bottom: 50px;
   position: relative;
@@ -25,28 +41,26 @@ section:not(#about) {
   margin: 10px auto;
   text-align: center;
 }
+
 /*NAVBAR AND HEADER*/
 header nav {
-  position: relative;
   color: whitesmoke;
   width: 100%;
-  height: 3rem;
+  height: 4rem;
+  display: flexbox;
+  justify-content: end;
   margin-bottom: 5px;
-  box-sizing: border-box;
   background-color: rgba(77, 68, 153, 0.8);
 }
 nav ul {
-  position: absolute;
   left: 67%;
   list-style: none;
-  display: flex;
-  margin-top: 0.8rem;
+  margin:auto 0;
   padding-left: 0;
-  margin-right: 10px;
 }
 nav li {
   color: white;
-  display: inline;
+  float: right;
   margin: 2px 4px 6px 8px;
 }
 
@@ -64,16 +78,21 @@ nav li {
   text-decoration: none;
 }
 nav #profile-pic {
-  width: 75px;
-  height: 75px;
+  width: 4rem;
+  height: 4rem;
+  
   border: solid black 2px;
   border-radius: 50%;
 }
 
 .navbar-brand {
-  margin-top: 0.5rem;
-  margin-left: 15px;
-  border: linear-gradient(90deg, rgb(32, 26, 117), rgb(10, 62, 114));
+  position: relative;
+  right:64%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0;
+  padding: 0;
 }
 
 /*HERO*/
@@ -81,14 +100,16 @@ nav #profile-pic {
 #about {
   margin-top: 0;
   color: white;
-  background-color: rgba(77, 68, 153, 0.8);
-  height: 20rem;
   width: 100%;
 }
 #about .container-fluid {
-  padding-top: 7px;
-  top: 15%;
-  position: absolute;
+  margin: 0;
+  height: 100%;
+  position: relative;
+  align-items: center;
+  border-bottom: #6675ff 2px solid;
+  background-color: rgba(77, 68, 153, 0.8);
+
 }
 #about h1,
 #about p {
@@ -142,8 +163,16 @@ figure i:hover {
   cursor: pointer;
 }
 blockquote {
+  background-color: rgba(121, 115, 169, 0.8);
+  border-radius: 10px;
+  padding-left: 4px;
   position: relative;
+  text-align: start;
 }
+figcaption {
+  text-align: start;
+}
+
 .fa-angle-right {
   font-size: 1.5rem;
 }
@@ -189,21 +218,24 @@ section[id="projects"] {
   margin-bottom: 0 !important;
 }
 section[id="projects"] .container {
+  position: relative;
+  top: -2px;
   height: 80%;
 }
-section[id="projects"] .row:nth-of-type(2) #projects-showcase {
+#projects-showcase {
   background: rgba(255, 255, 255, 0.629);
+  border: darkorchid 2px solid;
   border-radius: 10px;
-  border: #0033cc 2px solid;
 }
 section[id="projects"] .row:nth-of-type(2) {
   height: 100%;
   width: 80%;
-  margin: 0 auto 10px;
+  margin: 0 auto 1px;
 }
 section[id="projects"] .row:nth-of-type(2) .col-8 .projects-scroller {
   background: rgba(77, 68, 153, 0);
   height: 90%;
+  margin-bottom: 0;
   display: flex;
   margin: auto;
   justify-content: space-between;
@@ -225,13 +257,15 @@ section[id="projects"] .row:nth-of-type(2) .col-8 .projects-scroller {
 .projects-scroller li {
   font-size: 14px;
   border-radius: 10px;
+  align-items: center;
+  padding-top: 2px;
+  padding-bottom: 2px;
+  margin: 10px auto 10px;
   height: 15%;
   width: 80%;
   background-color: rgba(255, 250, 250, 0.8);
-  padding: auto 0;
   text-align: center;
   white-space: nowrap;
-  
 }
 ::-webkit-scrollbar {
   width: 3px;
@@ -257,7 +291,6 @@ section[id="projects"] .row:nth-of-type(2) .col-8 .projects-scroller {
 
 .projects-scroller li:hover {
   background-color: white;
-  border: solid #9ecaed 2px;
   box-shadow: 0 0 10px #9ecaed;
   cursor: pointer;
 }
@@ -272,14 +305,16 @@ section[id="projects"] .row:nth-of-type(2) .col-8 .projects-scroller {
 /*SKILLS*/
 .skill-table {
   margin: 0 auto 10px;
-
+  background-color: rgba(255, 250, 250, 0.8);
   border-radius: 10px;
   border: #0033cc 2px solid;
 }
 /*FOOTER*/
 footer {
-  display: block;
   background: #0033cc;
-  height: 100%;
-  margin-top: 20px;
+  height: 20vh;
+  max-height: 300px;
+  position: relative;
+  border-radius: 2px 2px 2px 2px;
+  border: 1px transparent solid;
 }
